--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skilled</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">  
-  
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header-principal">
       <div class="container">
         <a href="#">
-          <img src="img/elearning_logo.svg" alt="Logotipo de Elearning landing page">
+          <img
+            src="img/elearning_logo.svg"
+            alt="Logotipo de Elearning landing page"
+          />
         </a>
 
         <nav class="nav-principal">
@@ -24,105 +29,124 @@
             </li>
           </ul>
         </nav>
-
       </div>
     </header>
 
     <main>
-    <div class="hero">
-      <div class="container">
-        <div class="hero__content">
-          <h1 class="hero__title">Maximize skill, minimize budget</h1>
-          <p class="hero__subtitle">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
-          <p class="hero__buttons">
-            <a href="#" class="button--pink-orange">Get Started</a>
-          </p>
-        </div>
-
-        <div class="hero__img">
-          <img class="hero__img-mobile" src="img/hero_mobile.png" alt="">
-          <div class="hero__number hero__number-1">
-            <span class="hero__number-title">Members</span>
-            <span class="hero__number-number">29k</span>
+      <div class="hero">
+        <div class="container">
+          <div class="hero__content">
+            <h1 class="hero__title">Maximize skill, minimize budget</h1>
+            <p class="hero__subtitle">
+              Our modern courses across a range of in-demand skills will give
+              you the knowledge you need to live the life you want.
+            </p>
+            <p class="hero__buttons">
+              <a href="#" class="button--pink-orange">Get Started</a>
+            </p>
           </div>
 
-          <div class="hero__number hero__number-2">
-            <span class="hero__number-title">Course hours</span>
-            <span class="hero__number-number">1,451</span>
+          <div class="hero__img">
+            <img class="hero__img-mobile" src="img/hero_mobile.png" alt="" />
+            <div class="hero__number hero__number-1">
+              <span class="hero__number-title">Members</span>
+              <span class="hero__number-number">29k</span>
+            </div>
 
+            <div class="hero__number hero__number-2">
+              <span class="hero__number-title">Course hours</span>
+              <span class="hero__number-number">1,451</span>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="activities">
-      <div class="container">
-        <header class="activities__header">
-          <h2>Check out our most popular courses!</h2>
-        </header>
+      <div class="activities">
+        <div class="container">
+          <header class="activities__header">
+            <h2>Check out our most popular courses!</h2>
+          </header>
 
-        <article class="activities__item activities__item--animation">
-          <span class="activities__item-icon">
-            <img src="img/animation.svg" alt="">
-          </span>
-          <h3 class="activities__item-title">Animation</h3>
-          <p class="activities__item-description">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
-          <p class="activities__item-cta">
-            <a href="#" class="button-link">Get Started</a>
-          </p>
-        </article>
+          <article class="activities__item activities__item--animation">
+            <span class="activities__item-icon">
+              <img src="img/animation.svg" alt="" />
+            </span>
+            <h3 class="activities__item-title">Animation</h3>
+            <p class="activities__item-description">
+              Learn the latest animation techniques to create stunning motion
+              design and captivate your audience.
+            </p>
+            <p class="activities__item-cta">
+              <a href="#" class="button-link">Get Started</a>
+            </p>
+          </article>
 
-        <article class="activities__item activities__item--design">
-          <span class="activities__item-icon">
-            <img src="img/design.svg" alt="">
-          </span>
-          <h3 class="activities__item-title">Design</h3>
-          <p class="activities__item-description">Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
-          <p class="activities__item-cta">
-            <a href="#" class="button-link">Get Started</a>
-          </p>
-        </article>
+          <article class="activities__item activities__item--design">
+            <span class="activities__item-icon">
+              <img src="img/design.svg" alt="" />
+            </span>
+            <h3 class="activities__item-title">Design</h3>
+            <p class="activities__item-description">
+              Create beautiful, usable interfaces to help shape the future of
+              how the web looks.
+            </p>
+            <p class="activities__item-cta">
+              <a href="#" class="button-link">Get Started</a>
+            </p>
+          </article>
 
-        <article class="activities__item activities__item--photography">
-          <span class="activities__item-icon">
-            <img src="img/photography.svg" alt="">
-          </span>
-          <h3 class="activities__item-title">Photography</h3>
-          <p class="activities__item-description">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
-          <p class="activities__item-cta">
-            <a href="#" class="button-link">Get Started</a>
-          </p>
-        </article>
+          <article class="activities__item activities__item--photography">
+            <span class="activities__item-icon">
+              <img src="img/photography.svg" alt="" />
+            </span>
+            <h3 class="activities__item-title">Photography</h3>
+            <p class="activities__item-description">
+              Explore critical fundamentals like lighting, composition, and
+              focus to capture exceptional photos.
+            </p>
+            <p class="activities__item-cta">
+              <a href="#" class="button-link">Get Started</a>
+            </p>
+          </article>
 
-        <article class="activities__item activities__item--crypto">
-          <span class="activities__item-icon">
-            <img src="img/crypto.svg" alt="">
-          </span>
-          <h3 class="activities__item-title">Crypto</h3>
-          <p class="activities__item-description">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
-          <p class="activities__item-cta">
-            <a href="#" class="button-link">Get Started</a>
-          </p>
-        </article>
+          <article class="activities__item activities__item--crypto">
+            <span class="activities__item-icon">
+              <img src="img/crypto.svg" alt="" />
+            </span>
+            <h3 class="activities__item-title">Crypto</h3>
+            <p class="activities__item-description">
+              All you need to know to get started investing in crypto. Go from
+              beginner to advanced with this 54 hour course.
+            </p>
+            <p class="activities__item-cta">
+              <a href="#" class="button-link">Get Started</a>
+            </p>
+          </article>
 
-        <article class="activities__item activities__item--business">
-          <span class="activities__item-icon">
-            <img src="img/business.svg" alt="">
-          </span>
-          <h3 class="activities__item-title">Business</h3>
-          <p class="activities__item-description">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
-          <p class="activities__item-cta">
-            <a href="#" class="button-link">Get Started</a>
-          </p>
-        </article>
+          <article class="activities__item activities__item--business">
+            <span class="activities__item-icon">
+              <img src="img/business.svg" alt="" />
+            </span>
+            <h3 class="activities__item-title">Business</h3>
+            <p class="activities__item-description">
+              A step-by-step playbook to help you start, scale, and sustain your
+              business without outside investment.
+            </p>
+            <p class="activities__item-cta">
+              <a href="#" class="button-link">Get Started</a>
+            </p>
+          </article>
+        </div>
       </div>
-    </div>
     </main>
 
     <footer class="footer-principal">
       <div class="container">
         <a href="#">
-          <img src="img/elearning_logo_negative.png" alt="Logotipo de Elearning landing page">
+          <img
+            src="img/elearning_logo_negative.png"
+            alt="Logotipo de Elearning landing page"
+          />
         </a>
 
         <nav class="nav-principal">
@@ -134,8 +158,6 @@
         </nav>
       </div>
     </footer>
-
-
 
     <script type="module" src="/main.js"></script>
   </body>
